variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: not found: type int
var nbRetour:int=0
             ^